Fix movie poster layout on mobile devices

--- a/app/assets/stylesheets/movies.scss
+++ b/app/assets/stylesheets/movies.scss
@@ -18,7 +18,10 @@ div {
 
 .movieposter {
     width: 220px;
+}
 
+.movie-fullprofile-poster {
+    max-width: 100%; 
 }
 
 .ratings-bar {
